# BPNET

./: .gitmodules  CMakeLists.txt  README.md
src/: BPpotential.f90  CMakeLists.txt  bpnet.f90  bpnet_generate.f90  bpnet_predict.f90  fingerprint_basis.f90  fingerprints.f90  inputdata.f90  main.f90  math_utils.f90  mod_dataset.f90  nnASCII2bin.f90  shared_potentials.f90  structureinfo.f90  sub_generate.f90  sub_predict.f90  trainbin2ASCII.f90
src/LJ/: fingerprint_basis_LJ.f90  fingerprints_sub_LJ.f90
src/chebyshev/: chebyshev.f90  fingerprint_basis_chebyshev.f90  fingerprints_sub_chebyshevbasis.f90
src/multibasis/: fingerprint_basis_multi.f90  fingerprints_sub_multibasis.f90
src/neuralnetworks/: abstract_layer.f90  activation_functions.f90  aenet_potential.f90  dense_layer.f90  multi_layers.f90
src/spline/: bspline.f90  fingerprint_basis_spline.f90  fingerprints_sub_splinebasis.f90
src/splinetensor/: fingerprints_sub_splinetensorbasis.f90
src/unused/: MLP.f90  networks.f90
src/utils/: bfio.f90  cutoff.f90  fromaenet.f90  ioutils.f90  lclist.f90  neighborlist.f90  sub_nnASCII2bin.f90  sub_trainbin2ASCII.f90
tests/: CMakeLists.txt  test_bpnet.f90  test_math_utils.f90  test_network.f90
